# story-drip-feed

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  MIGRATION_PLAN.md  README.md  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_README.md  chunker.py  content_extraction_agent.py  database.py  debug_chunker.py  email_parser.py  epub_generator.py  inspect_db.py  kindle_sender.py  main.py  main_local.py  pyproject.toml  requirements.txt  test_agent_chunker.py  test_all_examples.py  test_chunker.py  test_content_agent.py  test_email_parser.py  test_extraction_cleaning.py  test_file_based_flow.py  test_full_pipeline.py  test_html_pipeline.py  test_multi_chunk.py  test_public_url.py  test_real_story.py  test_story.sh  update-secrets.sh
.claude/: settings.local.json
docs/: CONTENT_CLEANING.md  README.md  TESTING_WORKFLOW.md
modal-api/: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  TASK3_SUMMARY.md  env.story-prep-secrets.example  env.supabase-secrets.example  main.py  requirements.txt
nextjs-app/: README.md  env.example  package-lock.json  package.json  setup.sh  vercel.json
scripts/: TEST_README.md  demo-testing.sh  inspect_db.py  inspect_db_dev.py  manage_dev_db.py  quickstart.sh  run-tests-with-env.sh  view_webhook_logs.py
src/: chunker.py  content_extraction_agent.py  database.py  email_parser.py  file_storage.py  kindle_sender.py
tests/: test_agent_chunker.py  test_all_examples.py  test_chunker.py  test_content_agent.py  test_email_parser.py  test_extraction_cleaning.py  test_file_based_flow.py  test_full_pipeline.py  test_html_pipeline.py  (+3 more)
(+47 files in other folders)
