[tool.poetry]
name = "nighttime-story-prep"
version = "0.1.0"
description = ""
authors = ["Jason Wang <jhw513@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
modal = "^1.1.4"
python-dotenv = "^1.1.1"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.0"
lxml = "^5.3.0"
python-dateutil = "^2.9.0"
requests = "^2.32.0"
anthropic = "^0.69.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
